--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax-tilt": "^1.7.175",
     "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "tachyons": "^4.12.0",
     "tslib": "^2.6.2",
     "tsparticles": "^2.12.0",
     "tsparticles-engine": "^2.12.0"
