--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.175",
     "react-particles": "^2.12.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.1",
     "tachyons": "^4.12.0",
     "tslib": "^2.6.2",
     "tsparticles": "^2.12.0",
